--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   dio: ^4.0.0
+  dio_http_cache: ^0.3.0
   bloc: ^7.0.0
   flutter_bloc: ^7.1.0
 
