--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   dio_http_cache: ^0.3.0
   bloc: ^7.0.0
   flutter_bloc: ^7.1.0
+  cached_network_image: ^3.1.0
 
 dev_dependencies:
   flutter_test:
