--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   bloc: ^7.0.0
   flutter_bloc: ^7.1.0
   cached_network_image: ^3.1.0
+  intl: ^0.17.0
 
 dev_dependencies:
   flutter_test:
