card home complete

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,10 @@ flutter:
   # the material Icons class.
   uses-material-design: true
 
+  fonts:
+    - family:  PokedexApp
+      fonts:
+        - asset: fonts/PokedexApp.ttf
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
